src/COMP 261/src/com/hjwylde/uni/comp261/assignment4/parser/Grammar.txt
POLYTOPE3D      ::= LIGHT_SOURCE POLYTOPE2D+

LIGHT_SOURCE    ::= VECTOR3D

POLYTOPE2D      ::= VECTOR3D VECTOR3D VECTOR3D COLOR

VECTOR3D        ::= DOUBLE DOUBLE DOUBLE

COLOR           ::= INTEGER(0-255) INTEGER(0-255) INTEGER(0-255)

DOUBLE          ::= [-][0-9]+[.][0-9]+

INTEGER(0-255)  ::= [0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]
